2009-03-20	The InnoDB Team

	* buf/buf0buf.c, include/log0recv.h, log/log0recv.c:
	Remove the compile-time constant parameters of
	recv_recover_page(), recv_scan_log_recs(), and recv_sys_init().

2009-03-20	The InnoDB Team

	* data/data0type.c, handler/ha_innodb.cc, include/ha_prototypes.h:
	Declare innobase_get_at_most_n_mbchars() in ha_prototypes.h.

2009-03-20	The InnoDB Team

	* fil/fil0fil.c:
	Refer to fil_system directly, not via local variables.

2009-03-20	The InnoDB Team

	* page/page0page.c:
	In page_validate(), always report the space id, page number and
	the name of the index when corruption is noticed.

2009-03-20	The InnoDB Team

	* include/log0log.h, include/log0log.ic, log/log0log.c:
	Add in/out comments or const qualifiers to some function
	parameters as appropriate.

2009-03-20	The InnoDB Team

	* dict/dict0boot.c, dict/dict0dict.c, fsp/fsp0fsp.c,
	include/dict0dict.h, include/srv0srv.h, srv/srv0srv.c,
	page/page0page.c:
	Replace srv_sys->dummy_ind1 and srv_sys->dummy_ind2 with
	dict_ind_redundant and dict_ind_compact, which are
	initialized by dict_init().

2009-03-05	The InnoDB Team

	* handler/ha_innodb.cc, mysql-test/innodb-autoinc.result,
	mysql-test/innodb-autoinc.test:
	Fix Bug#43203 Overflow from auto incrementing causes server segv

2009-02-25	The InnoDB Team

	* handler/ha_innodb.cc, mysql-test/innodb-autoinc.result,
	mysql-test/innodb-autoinc.test:
	Fix Bug#42714 AUTO_INCREMENT errors in 5.1.31

2009-02-23	The InnoDB Team

	* btr/btr0cur.c:
	Fix Bug#43043 Crash on BLOB delete operation

2009-02-20	The InnoDB Team

	* handler/ha_innodb.cc:
	Make innodb_use_sys_malloc=ON the default.

2009-02-20	The InnoDB Team

	* handler/ha_innodb.cc, mysql-test/innodb-autoinc.result,
	mysql-test/innodb-autoinc.test:
	Fix Bug#42400 InnoDB autoinc code can't handle floating-point columns

2009-02-18	The InnoDB Team

	* include/ut0mem.h, os/os0proc.c, ut/ut0mem.c:
	Protect ut_total_allocated_memory with ut_list_mutex in